# fourier-estimator

./: .gitignore  FourierLayer.py  Untitled.ipynb  datasets.py  estimator.py  exploration.ipynb  main.py  plots.ipynb  pyproject.toml  raw.ipynb  raw.py  scikit.ipynb  tensor.ipynb  tensor.py  train.py
